--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="pt-BR">
 
   <head>
-    <title>Venilton FalvoJr</title>
+    <title>Antony Fernando Ferreira</title>
     
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,31 +33,31 @@
           <div class="w3-white w3-text-grey w3-card-4">
             <!-- @falvojr: This container has been modified to not use a profile picture. -->
             <div class="w3-container">
-              <h2>Venilton FalvoJr</h2>
+              <h2>Antony Fernando Ferreira</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Líder Técnico na DIO</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Araraquara-SP, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>falvojr@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(16) 99721-8281</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Analista Cloud na TOTVS</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>Praia Grande-SP, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>antonyfferreira@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>+55 11 99696-0924</p>
               <hr>
   
               <p class="w3-large">
                 <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Skills</b>
               </p>
-              <p>Java</p>
+              <p>Protheus</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:100%">100%</div>
               </div>
-              <p>Android</p>
+              <p>Banco de Dados</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
               </div>
-              <p>Koltin</p>
+              <p>OCI</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">70%</div>
               </div>
-              <p>Spring Framework</p>
+              <p>OutSystems</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">70%</div>
               </div>
@@ -74,10 +74,6 @@
               <div class="w3-light-grey w3-round-xlarge">
                 <div class="w3-round-xlarge w3-indigo" style="height:24px;width:60%"></div>
               </div>
-              <p>Espanhol</p>
-              <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:25%"></div>
-              </div>
               <br>
             </div>
           </div><br>
@@ -90,7 +86,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
-            <p>Doutorando na Universidade de São Paulo (USP), onde contribui junto ao Instituto de Ciências Matemáticas e de Computação (ICMC), campus de São Carlos. Possui 12 anos de experiência na área de desenvolvimento de software, com ênfase na análise, construção e arquitetura de sistemas Web e Mobile. Além disso, é certificado nas plataformas .NET (Microsoft), Java (Oracle) e Android (Google). Atualmente é Líder Técnico no time de Educação da DIO, onde é responsável por orquestrar os conteúdos educacionais da plataforma.</p>
+            <p>MBA em Gestão de Banco de Dados Oracle, certificação em OCI e Data Management Oracle, experiencia com TOTVS Protheus, PIMS MC, TReports, TProvider, PIMS Connector; Cloud; Banco de Dados; Analise e Desenvolvimento de Sistemas; Suporte a usuários e aplicações.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -98,9 +94,9 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
-              <p>Planejar o roadmap dos conteúdos educacionais da plataforma, tendo em vista as principais tendências de mercado e necessidades das empresas parceiras. Além de garantir que as experiências de aprendizagem tenham total sinergia com a nossa metodologia educacional.</p>
+              <h5 class="w3-opacity"><b>TOTVS S.A.</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro 2016 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <p>Arquitetura e Configuração Protheus em Windows e Linux; Manutenção e suporte aos serviços de Aplicação; Atualizações e migração de release TAF; Configuração de WS, Workflow; Atendimento e suporte aos Clientes Cloud Prime da TOTVS; Atualização de release do Protheus; Configuração do Carol Connect TOTVS; Analise de performance de ambientes Protheus; Configuração SFTP Filezilla Server.</p>
             </div>
           </div>
   
