--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </div>
               <p>OutSystems</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:40%">40%</div>
               </div>
               <br>
   
@@ -72,7 +72,7 @@
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:60%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:30%"></div>
               </div>
               <br>
             </div>
@@ -106,24 +106,23 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/762101D2" target="_blank">Formação: Programação Reativa com Spring WebFlux (36h)</a></li>
-                <li><a href="https://www.dio.me/certificate/07041B99" target="_blank">Curso: Desenvolvimento Mobile Nativo Para Android (1h)</a></li>
-                <li><a href="https://www.dio.me/certificate/F12AC30B" target="_blank">Curso: Componentes, Layouts e UI/UX Em Apps Android (3h)</a></li>
-                <li><a href="https://www.dio.me/certificate/3FB20BF1" target="_blank">Curso: Java e Kotlin Juntos!? Construindo Apps Android (3h)</a></li>
+                <li><a href="https://www.dio.me/certificate/0E0127DB" target="_blank">Formacao OutSystems Fundamentals (20h)</a></li>
+                <li><a href="https://www.dio.me/certificate/835D8017" target="_blank">Turbinando seus Projetos com OutSystems (5h)</a></li>
+                <li><a href="https://www.dio.me/certificate/593E63DC" target="_blank">Criando um Site Tematico com OutSystems (1h)</a></li>
+                <li><a href="https://www.dio.me/certificate/E7A9C3A3" target="_blank">Refatorando o Projeto de Hotel e Hospedagem com OutSystems (1h)</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Universidade de São Paulo (USP)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2023</h6>
-              <p>Doutorando em Engenharia de Computação com foco em acessibildiade de conteúdos educacionais.</p>
+              <h5 class="w3-opacity"><b>Universidade de Araraquara (UNIARA)</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Marco 2018</h6>
+              <p>MBA em Gestao de Banco de Dados Oracle.</p>
             </div>
           </div>
 
@@ -134,17 +133,17 @@
             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/falvojr/copa-2022-android" target="_blank">falvojr/copa-2022-android</a>
+                <a href="https://github.com/antonyfferreira/HotelDio" target="_blank">antonyfferreira/HotelDio</a>
               </h6>
-              <p>App Android Nativo utilizando a arquitetura MVVM com Kotlin e diversas features do Android Jetpack.</p>
+              <p>sistema para Hotel e Hospedagem com OutSystems.</p>
               <hr>
             </div>
             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="https://gitlab.com/denilsonbonatti/kubernetes-projeto2-dio" target="_blank">denilsonbonatti/kubernetes-projeto2-dio</a>
+                <a href="https://github.com/antonyfferreira/MobileHotelDio" target="_blank">antonyfferreira/MobileHotelDio</a>
               </h6>
-              <p>Repositório no GitLab com um pipeline configurado em Kubernetes.</p>
+              <p>Sistema para Hotel e Hospedagem Mobile com OutSystems</p>
             </div>
           </div>
   
@@ -159,8 +158,8 @@
   
     <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="https://github.com/falvojr" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/falvojr" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/antonyfferreira" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/antonyfferreira" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
